[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-ttlock-client"
version = "0.1.0"
description = "Async Python client for TTLock & Sciener smart lock APIs"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["ttlock", "sciener", "smart-lock", "iot", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytz>=2024.1",
]

[project.urls]
Repository = "https://github.com/er1ckr1ck0/py-ttlock-client"

[tool.setuptools.packages.find]
include = ["py_ttlock_client*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
